feat: auth for swagger endpoints
